Improved navbar responsiveness and spacing

--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,10 +1,8 @@
-<style>
- 
-</style>
-
 <nav class="navbar navbar-expand-lg bg-body-light border-bottom sticky-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/"><i class="fa-regular fa-compass"></i></a>
+    <a class="navbar-brand" href="/">
+      <i class="fa-regular fa-compass"></i>
+    </a>
     <button
       class="navbar-toggler"
       type="button"
@@ -19,31 +17,29 @@
       <div class="navbar-nav">
         <a class="nav-link" href="/listings">Explore</a>
       </div>
-      <div class="navbar-nav ms-auto">
-        <form  action="/listings" method="GET" class="d-flex" role="search">
+      <div class="navbar-nav ms-auto w-100 d-flex flex-column flex-lg-row align-items-lg-center">
+        <form action="/listings" method="GET" class="d-flex w-100 flex-column flex-sm-row" role="search">
           <input
             class="form-control me-2 search-inp"
             type="search"
             name="search"
             placeholder="Search Destination"
             aria-label="Search" />
-          <button class="btn btn-search" id="Search-btn" type="submit">
-            <i class="fa-solid fa-magnifying-glass"></i>Search
+          <button class="btn btn-search mt-2 mt-sm-0" id="Search-btn" type="submit">
+            <i class="fa-solid fa-magnifying-glass"></i> Search
           </button>
         </form>
       </div>
-      <div class="navbar-nav ms-auto">
-        <a class="nav-link" href="/listings/new">AddNewListing</a>
-        <%if(!currUser){%>
-        <a class="nav-link" href="/signup"><b>Signup</b></a>
+      <div class="navbar-nav ms-auto text-center">
+        <a class="nav-link me-2" href="/listings/new">Add New Listing</a>
+        <% if (!currUser) { %>
+        <a class="nav-link me-2" href="/signup"><b>Signup</b></a>
         <a class="nav-link" href="/login"><b>Login</b></a>
-        <%}%> <%if(currUser){%>
+        <% } %>
+        <% if (currUser) { %>
         <a class="nav-link" href="/logout"><b>Logout</b></a>
-        <%}%>
+        <% } %>
       </div>
     </div>
   </div>
 </nav>
-
-
-
